<resources>
    <string name="app_name">Pult Taxi</string>
    <string name="register_description">Ознакомьтесь с договором-оферты. Регистрируясь или авторизуясь, вы принимаете его условия</string>
    <string name="continue_button">Продолжить</string>
    <string name="number_begining">+7</string>
    <string name="enter_phone_number">Введите номер вашего телефона</string>
    <string name="enter_code_from_sms">Введите код из СМС</string>
    <string name="ready_button">Готово</string>
    <string name="your_data">Ваши данные:</string>
    <string name="user_name_dialo">Имя пользователя:</string>
    <string name="your_id_dialog">Ваш id:</string>
    <string name="your_email">Ваша почта:</string>
</resources>