<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentMainNumber"
    android:background="@color/main_background">


    <View
        android:id="@+id/view"
        android:layout_width="172dp"
        android:layout_height="172dp"
        android:layout_marginTop="129dp"
        android:background="@drawable/round_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:src="@drawable/ic_taxi"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/text_view_hint"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textSize="12sp"
        android:text="@string/enter_phone_number"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_number"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_number"
        app:layout_constraintStart_toStartOf="@+id/edit_text_number"
        app:layout_constraintTop_toTopOf="@+id/edit_text_number" />

    <EditText
        android:id="@+id/edit_text_number"
        android:layout_width="176dp"
        android:layout_height="29dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="475dp"
        android:cursorVisible="false"
        android:background="@null"
        android:fontFamily="@font/roboto"
        android:inputType="phone"
        android:maxLength="13"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/text_view_prefix"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="471dp"
        android:fontFamily="@font/roboto"
        android:text="@string/number_begining"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="313dp"
        android:layout_height="1dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="31dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"
        android:layout_width="355dp"
        android:layout_height="57dp"
        android:layout_marginTop="557dp"
        android:layout_marginBottom="53dp"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:textColor="@color/main_background"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="258dp"
        android:layout_height="24dp"
        android:layout_marginTop="628dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/roboto"
        android:text="@string/register_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>